--- a/yazi/yazi.toml
+++ b/yazi/yazi.toml
@@ -49,7 +49,7 @@ play = [
 	{ run = '''mediainfo "$1"; echo "Press enter to exit"; read _''', block = true, desc = "Show media info", for = "unix" },
 ]
 set-wallpaper = [
-	{ run = 'wallust run $1 & hyprctl hyprpaper reload ,$1', desc = "Set as Wallpaper", for = "linux"}
+	{ run = 'wallust run $1; hyprctl hyprpaper reload ,$1', desc = "Set as Wallpaper", for = "linux"}
 ]
 
 [open]
