--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -244,7 +244,7 @@ bind = , PRINT, exec, hyprshot -m region -z -o ~/Pictures/Screenshots/
 bind = $mainMod, C, exec, $terminal
 bind = $mainMod, Q, killactive,
 bind = $mainMod, M, exit,
-bind = $mainMod, E, exec, $terminal -e $fileManager
+bind = $mainMod, E, exec, $terminal -e bash -ic '$fileManager'
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, exec, hyprpicker -a # dwindle
