added conditionals for hyprland config and intellij fix

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -23,13 +23,17 @@
 # colour import
 source = ~/.config/hypr/colors.conf
 
+#################
+### SPECIFICS ###
+#################
+
+source = ~/.config/hypr/specifics.conf
+ 
 ################
 ### MONITORS ###
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor = DP-1, 1920x1080@144, 0x0, 1, vrr, 2
-monitor = DP-2, 1920x1080@60, -1920x0, 1
 
 
 ###################
@@ -80,7 +84,7 @@ env = XCURSOR_THEME,BreezeX-RoséPine
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
-    gaps_in = 5
+    gaps_in = 3
     gaps_out = 5
     
     border_size = 1
@@ -210,7 +214,7 @@ input {
     scroll_button = 274
     
     touchpad {
-        natural_scroll = false
+        natural_scroll = true
     }
 }
 
@@ -324,6 +328,13 @@ windowrulev2 = suppressevent maximize, class:.*
 
 # Fix some dragging issues with XWayland
 windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+
+# fix tooltips (always have a title of `win.<id>`)
+windowrulev2 = noinitialfocus, class:^(.*jetbrains.*)$, title:^(win.*)$
+windowrulev2 = nofocus, class:^(.*jetbrains.*)$, title:^(win.*)$
+# fix tab dragging (always have a single space character as their title)
+windowrulev2 = noinitialfocus, class:^(.*jetbrains.*)$, title:^\\s$
+windowrulev2 = nofocus, class:^(.*jetbrains.*)$, title:^\\s$
 
 xwayland {
   force_zero_scaling = true
