--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = /home/daniel/.cache/wallust/1.6_2_2_01_0_20_1_0_ll1kfa.json
-wallpaper = ,/home/daniel/.cache/wallust/1.6_2_2_01_0_20_1_0_ll1kfa.json
+preload = /home/daniel/Pictures/Wallpapers/Virtual-Youtuber-Hololive-Himemori-Luna-2244140-wallhere.com.jpg
+wallpaper = ,/home/daniel/Pictures/Wallpapers/Virtual-Youtuber-Hololive-Himemori-Luna-2244140-wallhere.com.jpg
