--- a/wallust/templates/hypr/specifics.conf
+++ b/wallust/templates/hypr/specifics.conf
@@ -4,6 +4,7 @@ monitor = DP-1, 1920x1080@144, 0x0, 1, vrr, 2
 monitor = DP-2, 1920x1080@60, -1920x0, 1
 {% elif HOSTNAME == think %}
 # TODO
+monitor = eDP-1, 1920x1080@60.02, 0x0, 1.25
 {% else %}
 # invalid hostname
 {% endif %}
