--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -108,7 +108,7 @@ decoration {
 
     # Change transparency of focused and unfocused windows
     active_opacity = 1
-    inactive_opacity = 0.9
+    inactive_opacity = 1
 
     shadow {
         enabled = true
@@ -120,10 +120,10 @@ decoration {
     # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
         enabled = true
-        size = 3
-        passes = 3
+        size = 1
+        passes = 1
 
-        vibrancy = 0.1696
+        vibrancy = 0.0
     }
 }
 
@@ -208,6 +208,7 @@ input {
     repeat_rate = 25
     repeat_delay = 200
 
+    # accel_profile = custom 0.4 0.0 0.2 0.6 1.2 1.5
     accel_profile = flat
 
     scroll_method = on_button_down
@@ -239,7 +240,7 @@ device {
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # global keybinds
-bind = CONTROL SHIFT, M, pass, class:^(discord)$
+# bind = CONTROL SHIFT, M, pass, class:^(discord)$
 
 # screenshot
 bind = , PRINT, exec, hyprshot -m region -z -o ~/Pictures/Screenshots/
