added fullscreen keybind

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -255,6 +255,8 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, exec, hyprpicker -a # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
+# bind = ,F11, fullscreen
+bind = $mainMod, F, fullscreen
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
