--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -84,13 +84,14 @@ env = XCURSOR_THEME,BreezeX-RoséPine
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
-    gaps_in = 3
-    gaps_out = 5
+    gaps_in = 8
+    gaps_out = 15
     
-    border_size = 1
+    border_size = 0
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    col.active_border = $color8 $color9 $color10 $color11 $color12 $color13 $color14 $color15 40deg 
+    col.active_border = $color4 $color12
+    # col.active_border = $color8 $color9 $color10 $color11 $color12 $color13 $color14 $color15 40deg 
     col.inactive_border = rgba(595959aa)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
@@ -104,7 +105,8 @@ general {
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
-    rounding = 7
+    rounding = 15
+    rounding_power = 2.0
 
     # Change transparency of focused and unfocused windows
     active_opacity = 1
@@ -112,8 +114,8 @@ decoration {
 
     shadow {
         enabled = true
-        range = 4
-        render_power = 3
+        range = 10
+        render_power = 5
         color = rgba(1a1a1aee)
     }
 
@@ -208,7 +210,7 @@ input {
     repeat_rate = 25
     repeat_delay = 200
 
-    # accel_profile = custom 0.4 0.0 0.2 0.6 1.2 1.5
+    # accel_profile = custom 0.8 0.0 0.3 0.8 2.0 3.5
     accel_profile = flat
 
     scroll_method = on_button_down
@@ -244,7 +246,7 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 # bind = CONTROL SHIFT, M, pass, class:^(discord)$
 
 # screenshot
-bind = , PRINT, exec, hyprshot -m region -z -o ~/Pictures/Screenshots/
+bind = , PRINT, exec, grimblast copy area --freeze
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, C, exec, $terminal
