--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = /home/daniel/Pictures/Wallpapers/Virtual-Youtuber-Hololive-Himemori-Luna-2244140-wallhere.com.jpg
-wallpaper = ,/home/daniel/Pictures/Wallpapers/Virtual-Youtuber-Hololive-Himemori-Luna-2244140-wallhere.com.jpg
+preload = /home/daniel/Pictures/Wallpapers/yGs0vRG.jpeg
+wallpaper = ,/home/daniel/Pictures/Wallpapers/yGs0vRG.jpeg
