--- a/ghostty/config
+++ b/ghostty/config
@@ -41,8 +41,10 @@
 # # which is explained in the docs for that config option.
 # # Just for example:
 # resize-overlay-duration = 4s 200ms
-background-opacity = 0.90
+background-opacity = 0.70
 window-theme = auto
 confirm-close-surface = false
 keybind = ctrl+a>s=new_split:right
 mouse-hide-while-typing = true
+minimum-contrast = 1.1
+command = bash --init-file /home/daniel/.bashrc
