--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -58,7 +58,7 @@ $menu = rofi -show drun
 # exec-once = $terminal
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
-exec-once = waybar & hyprpaper
+exec-once = waybar & hyprpaper & hyprsunset & hypridle
 exec-once = systemctl --user start hyprpolkitagent
 exec-once = ghostty --gtk-single-instance=true --quit-after-last-window-closed=false --initial-window=false
 
@@ -205,10 +205,10 @@ input {
 
     follow_mouse = 1
 
-    sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
-
     repeat_rate = 25
     repeat_delay = 200
+
+    sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 
     # accel_profile = custom 0.8 0.0 0.3 0.8 2.0 3.5
     accel_profile = flat
@@ -255,7 +255,8 @@ bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $terminal -e bash -ic '$fileManager'
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu
-bind = $mainMod, P, exec, hyprpicker -a # dwindle
+bind = $mainMod, P, exec, hyprpicker -a
+bind = $mainMod, L, exec, hyprlock
 bind = $mainMod, J, togglesplit, # dwindle
 # bind = ,F11, fullscreen
 bind = $mainMod, F, fullscreen
