--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -58,7 +58,9 @@ $menu = rofi -show drun
 # exec-once = $terminal
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
-exec-once = waybar & hyprpaper & hyprsunset & hypridle
+exec-once = hyprsunset & hypridle
+exec-once = caelestia shell
+# exec-once = waybar & hyprpaper
 exec-once = systemctl --user start hyprpolkitagent
 exec-once = ghostty --gtk-single-instance=true --quit-after-last-window-closed=false --initial-window=false
 
@@ -225,7 +227,7 @@ input {
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
 gestures {
     workspace_swipe = false
-}
+    }
 
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
@@ -243,7 +245,7 @@ device {
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # global keybinds
-# bind = CONTROL SHIFT, M, pass, class:^(discord)$
+bind = CONTROL SHIFT, M, pass, class:^(discord)$
 
 # screenshot
 bind = , PRINT, exec, grimblast copy area --freeze
