--- a/caelestia/hypr-user.conf
+++ b/caelestia/hypr-user.conf
@@ -1,5 +1,6 @@
 monitor = DP-1, 2560x1440@240, 0x0, 1.25, vrr, 2
 monitor = DP-2, 1920x1080@144, -1920x0, 1, vrr, 2
+monitor = eDP-1, 1920x1080@60, 0x0, 1.25
 
 render {
     direct_scanout = 2
@@ -27,7 +28,7 @@ input {
     
     touchpad {
         natural_scroll = true
-        scroll_factor = 0.2
+        scroll_factor = 1
     }
 }
 
@@ -36,3 +37,10 @@ xwayland {
 }
 
 bind = SUPER, T, togglesplit
+
+# Cursors
+env = GDK_SCALE,1
+env = HYPRCURSOR_THEME,rose-pine-hyprcursor
+env = HYPRCURSOR_SIZE,32
+env = XCURSOR_THEME,BreezeX-RoséPine
+env = XCURSOR_SIZE,24
