fix misplaced symbol causing issues

--- a/caelestia-dots/hypr/hyprland/rules.conf
+++ b/caelestia-dots/hypr/hyprland/rules.conf
@@ -38,7 +38,7 @@ windowrule = workspace special:music, class:feishin|Spotify|Supersonic
 windowrule = workspace special:music, initialTitle:Spotify( Free)?  # Spotify wayland, it has no class for some reason
 windowrule = workspace special:music, title:(.*)(Soundcloud)(.*) 
 # windowrule = opacity 0.1, special:music, title:(.*)(Soundcloud)(.*) 
-windowrule = workspace special:communication, class:discord|equibop|vesktop|
+windowrule = workspace special:communication, class:discord|equibop|vesktop
 windowrule = workspace special:whatsapp, class:whatsapp|Altus
 windowrule = workspace special:todo, class:Todoist
 
