--- a/caelestia-dots/hypr/hyprland/keybinds.conf
+++ b/caelestia-dots/hypr/hyprland/keybinds.conf
@@ -165,9 +165,10 @@ bind = Ctrl+Alt, Escape, exec, app2unit -- qps
 bind = Ctrl+Alt, V, exec, app2unit -- pavucontrol
 
 # Utilities
-bindl = Alt, Print, exec, caelestia screenshot  # Full screen capture > clipboard
-bind = , Print, global, caelestia:screenshotFreeze  # Capture region (freeze)
-bind = Shift, Print, global, caelestia:screenshot  # Capture region
+bind = , Print, exec, grimblast copy area --freeze
+bindl = Alt, Print, exec, caelestia screenshotFreeze  # Full screen capture > clipboard
+bind = Shift , Print, global, caelestia:screenshotFreeze  # Capture region (freeze)
+# bind = Shift, Print, global, caelestia:screenshot  # Capture region
 bind = Super+Alt, R, exec, caelestia record -s  # Record screen with sound
 bind = Ctrl+Alt, R, exec, caelestia record  # Record screen
 bind = Super+Shift+Alt, R, exec, caelestia record -r  # Record region
