autostart fcitx5 and easyeffects

--- a/caelestia/hypr-user.conf
+++ b/caelestia/hypr-user.conf
@@ -57,3 +57,9 @@ windowrulev2 = nofocus, class:^(.*jetbrains.*)$, title:^(win.*)$
 # fix tab dragging (always have a single space character as their title)
 windowrulev2 = noinitialfocus, class:^(.*jetbrains.*)$, title:^\\s$
 windowrulev2 = nofocus, class:^(.*jetbrains.*)$, title:^\\s$
+
+
+exec-once = fcitx5
+exec-once = easyeffects --gapplication-service
+
+
